FrameBasedServiceWorker: execute a task based on a target FPS with deltatime

--- a/templates/cs.template
+++ b/templates/cs.template
@@ -4,7 +4,7 @@
  * @created     : {{TIMESTAMP}}
  */
 
-namespace GodotEGP.{{FILEP}};
+namespace GatoGPT.{{FILEP}};
 
 using Godot;
 using GodotEGP.Objects.Extensions;
