--- a/GatoGPT.csproj
+++ b/GatoGPT.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AllMiniLmL6V2Sharp" Version="0.0.1" />
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="libtorch-cpu-win-x64" Version="2.1.0.1" />
