--- a/GatoGPT.csproj
+++ b/GatoGPT.csproj
@@ -11,15 +11,18 @@
     <PackageReference Include="AllMiniLmL6V2Sharp" Version="0.0.1" />
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="ChromaDBSharp" Version="0.0.1" />
     <PackageReference Include="libtorch-cpu-win-x64" Version="2.1.0.1" />
     <PackageReference Include="LLamaSharp" Version="0.8.1" />
     <!-- <PackageReference Include="LLamaSharp.Backend.Cpu" Version="0.8.1" /> -->
     <PackageReference Include="LLamaSharp.Backend.Cuda11" Version="0.8.1" />
     <PackageReference Include="LLamaSharp.Backend.Cuda12" Version="0.8.1" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Microsoft.ML" Version="3.0.0" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.16.3" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime.Managed" Version="1.16.3" />
