--- a/GatoGPT.csproj
+++ b/GatoGPT.csproj
@@ -13,10 +13,11 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="ChromaDBSharp" Version="0.0.1" />
     <PackageReference Include="libtorch-cpu-win-x64" Version="2.1.0.1" />
-    <PackageReference Include="LLamaSharp" Version="0.8.1" />
+    <PackageReference Include="LLamaSharp" Version="0.9.1" />
+    <PackageReference Include="LLamaSharp.Backend.Cpu" Version="0.9.1" />
     <!-- <PackageReference Include="LLamaSharp.Backend.Cpu" Version="0.8.1" /> -->
-    <PackageReference Include="LLamaSharp.Backend.Cuda11" Version="0.8.1" />
-    <PackageReference Include="LLamaSharp.Backend.Cuda12" Version="0.8.1" />
+    <PackageReference Include="LLamaSharp.Backend.Cuda11" Version="0.9.1" />
+    <PackageReference Include="LLamaSharp.Backend.Cuda12" Version="0.9.1" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
