--- a/.gitignore
+++ b/.gitignore
@@ -488,3 +488,5 @@ $RECYCLE.BIN/
 # Managed by git-multi (sub repo ssh://git@gitlab.elgatopanzon.io:2224/godot/addons/godotegp-framework/godotegp-framework-nongame.git) (commit 28c4cd1fa85b6f590cc7dbbe25fd873e20622bbb) 
 /libs/godotegp-framework-nongame 
 
+# data directory when using docker compose
+/GatoGPT_Data
