--- a/.gitignore
+++ b/.gitignore
@@ -483,9 +483,9 @@ $RECYCLE.BIN/
 # Vim temporary swap files
 *.swp
 
-# Managed by git-multi (sub repo ssh://git@gitlab.elgatopanzon.io:2224/godot/addons/godotegp-framework/addon-csharp.git) (commit f820393) 
+# Managed by git-multi (sub repo git@github.com:elgatopanzon/godotegp-framework.git) (commit f820393) 
 /libs/godotegp-framework 
-# Managed by git-multi (sub repo ssh://git@gitlab.elgatopanzon.io:2224/godot/addons/godotegp-framework/godotegp-framework-nongame.git) (commit 50a943a) 
+# Managed by git-multi (sub repo git@github.com:elgatopanzon/godotegp-framework-nongame.git) (commit 50a943a) 
 /libs/godotegp-framework-nongame 
 
 # data directory when using docker compose
